--- a/package.json
+++ b/package.json
@@ -1,48 +1,55 @@
 {
-  "name": "empty",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "build": "tsc --build",
-    "build.watch": "tsc --build --watch",
+    "dev:web": "next dev",
+    "dev:worker": "tsx --watch temporal/worker.ts",
+    "dev:temporal": "temporal server start-dev",
+    "build": "next build",
+    "start": "next start",
+    "start:worker": "tsx temporal/worker.ts",
+    "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "eslint .",
-    "start": "ts-node src/worker.ts",
-    "start.watch": "nodemon src/worker.ts",
-    "workflow": "ts-node src/client.ts",
-    "test": "mocha --exit --require ts-node/register --require source-map-support/register src/mocha/*.test.ts"
-  },
-  "nodemonConfig": {
-    "execMap": {
-      "ts": "ts-node"
-    },
-    "ext": "ts",
-    "watch": [
-      "src"
-    ]
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:push": "prisma db push",
+    "prisma:reset": "prisma migrate reset --force"
   },
   "dependencies": {
-    "@temporalio/activity": "^1.11.8",
-    "@temporalio/client": "^1.11.8",
-    "@temporalio/worker": "^1.11.8",
-    "@temporalio/workflow": "^1.11.8",
-    "nanoid": "3.x"
+    "@prisma/client": "^6.12.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@temporalio/activity": "^1.12.1",
+    "@temporalio/client": "^1.12.1",
+    "@temporalio/worker": "^1.12.1",
+    "@temporalio/workflow": "^1.12.1",
+    "next": "^15.0.0",
+    "prisma": "^6.12.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "twilio": "^5.8.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
-    "@temporalio/testing": "^1.11.8",
-    "@types/mocha": "8.x",
-    "@types/node": "^22.9.1",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
+    "@temporalio/testing": "^1.12.1",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "@vitest/ui": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-deprecation": "^3.0.0",
-    "mocha": "8.x",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.4.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "@tsconfig/node22": "^22.0.0"
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
+    "tsx": "^4.19.2",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
